# NOISEKILLER

./: .env  .gitignore  LICENSE  requirements.txt
app/: config.py  main.py
app/api/: routes.py
app/constants/: prompts.py
app/core/executor/: code_executor.py  safety.py
app/core/fixer/: code_fixer.py
app/core/generator/: code_generator.py
app/models/: schema.py
app/services/: verifier_service.py
app/utils/: exceptions.py  logger.py
scripts/: run_benchmarks.py  setup_env.sh
server/: pyproject.toml  requirements.txt
server/app/core/evaluator/: result_evaluator.py
